Add mark and compact algo

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,8 +7,16 @@ add_executable( markAndSweepTest
     markAndSweepTest.cpp
 )
 
+add_executable( markAndCompactTest
+    markAndReallocateTest.cpp
+)
+
 target_link_libraries( markAndSweepTest
     cspec
     markAndSweep
 )
 
+target_link_libraries( markAndCompactTest
+    cspec
+    markAndCompact
+)
